--- a/src/app/documents/single-subcategory/single-subcategory.component.html
+++ b/src/app/documents/single-subcategory/single-subcategory.component.html
@@ -142,11 +142,11 @@
       <div class="set-12 category-list">
         <mat-card class="set-12">
           <div class="set-12 table-head">
-            <p class="title">Temas</p>
+            <p class="title">Problemas</p>
             <!-- <input type="text" (keyup)="applyFilter($event)" placeholder="Buscar en temas..."
               [disabled]="topics.length == 0"> -->
             <mat-form-field appearance="outline">
-              <mat-label>Buscar en temas...</mat-label>
+              <mat-label>Buscar en problemas...</mat-label>
               <input matInput type="text" (keyup)="applyFilter($event)" [disabled]="topics.length == 0" />
               <button matSuffix mat-icon-button>
                 <mat-icon>search</mat-icon>
