--- a/src/app/college-marathon/create-team/create-team.component.scss
+++ b/src/app/college-marathon/create-team/create-team.component.scss
@@ -24,6 +24,12 @@
     background: transparent !important;
   }
 
+  ::ng-deep .mat-horizontal-stepper-content {
+    h3 {
+      margin-bottom: 20px;
+    }
+  }
+
   .usr-auth {
     margin: 30px 0;
     text-align: center;
@@ -37,14 +43,18 @@
     }
   }
 
-  .teamreg {
-    margin-top: 30px;
-  }
-
   .editor-form {
     margin-bottom: 20px;
     background: #ffffff;
     border-radius: 5px;
+  }
+
+  .topicdesc {
+    margin-bottom: 20px;
+
+    h3 {
+      margin-bottom: 20px;
+    }
   }
 
   .usrlfx {
