--- a/src/app/college-marathon/create-team/create-team.component.html
+++ b/src/app/college-marathon/create-team/create-team.component.html
@@ -35,6 +35,9 @@
                     <small>{{state.name}}</small>
                   </mat-option>
                 </mat-select>
+                <mat-hint align="start">
+                  <small>** Selecciona tu estado</small>
+                </mat-hint>
               </mat-form-field>
             </div>
 
@@ -42,6 +45,9 @@
               <mat-form-field appearance="outline">
                 <mat-label>Nombre de tu universidad</mat-label>
                 <input type="text" matInput formControlName="university">
+                <mat-hint align="start">
+                  <small>** Escribe el nombre de tu universidad</small>
+                </mat-hint>
               </mat-form-field>
             </div>
 
@@ -65,6 +71,9 @@
                   <small>{{option.universidad_nombre}}</small>
                 </mat-option>
               </mat-autocomplete>
+              <mat-hint align="start">
+                <small>** Selecciona tu universidad</small>
+              </mat-hint>
             </mat-form-field>
           </div>
 
@@ -72,17 +81,23 @@
             <mat-form-field appearance="outline">
               <mat-label>Nombre del equipo</mat-label>
               <input matInput formControlName="name">
+              <mat-hint align="start">
+                <small>** ¡Escoge un nombre chido que defina su causa y les represente!</small>
+              </mat-hint>
             </mat-form-field>
 
             <mat-form-field appearance="outline">
               <mat-label>Líder de equipo</mat-label>
               <input matInput formControlName="leader">
+              <mat-hint align="start">
+                <small>** Líder de equipo</small>
+              </mat-hint>
             </mat-form-field>
           </form>
 
           <div class="set-12 ctrls">
             <button type="button" mat-raised-button color="warn"
-              [disabled]="registerTeamFG.invalid || !userAvailable || submitted" (click)="createTeam()">
+              [disabled]="!registerTeamFG.valid || !userAvailable || submitted" (click)="createTeam()">
               <small>Siguiente</small>
             </button>
             <mat-spinner diameter="30" *ngIf="submitted"></mat-spinner>
@@ -90,7 +105,10 @@
         </mat-step>
 
         <mat-step>
-          <h3>Invita a tus compañeros de equipo</h3>
+          <h3>¡Invita a tu equipo a registrarse!</h3>
+          <p class="hint">
+            <small>Recuerda que solo puede agregar integrantes quien lleva el liderazgo</small>
+          </p>
           <div class="set-12 usrlfx">
             <form [formGroup]="searchUserFG" class="set-12">
               <div class="set-10">
@@ -132,14 +150,14 @@
         </mat-step>
 
         <mat-step>
-          <h3>Carga tu identificación escolar</h3>
+          <h3>Carga tu credencial de estudiante para garantizar tu participación</h3>
           <form class="set-12" [formGroup]="userIDFG">
             <input type="file" #file (change)="onFileSelected($event)">
             <button type="button" class="upldbtn" (click)="file.click()">
               <mat-icon>file_upload</mat-icon>
               <p><strong>Identificación de tu Universidad</strong></p>
               <p><small>Peso máximo <strong>5MB</strong></small></p>
-              <p><small>Tipo de archivo <strong>.pdf</strong></small></p>
+              <p><small>Tipo de archivo <strong>jpg, png, pdf</strong></small></p>
             </button>
           </form>
 
@@ -155,7 +173,11 @@
         </mat-step>
 
         <mat-step>
-          <h3>Selecciona tus temas</h3>
+          <h3>¿En qué temática quieren participar?</h3>
+          <p class="hint">
+            <small>Las propuestas y temas del maratón deben reflejar una problemática de tu comunidad, localidad o
+              ciudad.</small>
+          </p>
           <form class="set-12" [formGroup]="setupFG">
             <mat-form-field appearance="outline">
               <mat-label>Cobertura</mat-label>
@@ -164,6 +186,9 @@
                   <small>{{state.name}}</small>
                 </mat-option>
               </mat-select>
+              <mat-hint align="start">
+                <small>** Cobertura</small>
+              </mat-hint>
             </mat-form-field>
 
             <mat-form-field appearance="outline">
@@ -173,6 +198,9 @@
                   <small>{{layout.category.name}}</small>
                 </mat-option>
               </mat-select>
+              <mat-hint align="start">
+                <small>** Selecciona un tema en el que quieran desarrollar una propuesta.</small>
+              </mat-hint>
             </mat-form-field>
 
             <mat-form-field appearance="outline">
@@ -182,6 +210,9 @@
                   <small>{{layout.category.name}}</small>
                 </mat-option>
               </mat-select>
+              <mat-hint align="start">
+                <small>** Selecciona un subtema en el que quieran desarrollar una propuesta.</small>
+              </mat-hint>
             </mat-form-field>
           </form>
 
@@ -189,7 +220,8 @@
             <button type="button" mat-raised-button color="warn" matStepperPrevious [disabled]="submitted">
               <small>Anterior</small>
             </button>
-            <button type="button" mat-raised-button color="warn" (click)="saveTeamTopicSetup()" [disabled]="submitted">
+            <button type="button" mat-raised-button color="warn" (click)="saveTeamTopicSetup()"
+              [disabled]="setupFG.invalid || submitted">
               <small>Siguiente</small>
             </button>
             <mat-spinner diameter="30" *ngIf="submitted"></mat-spinner>
@@ -209,15 +241,24 @@
                   <small>{{topic.title}}</small>
                 </mat-option>
               </mat-select>
+              <mat-hint align="start">
+                <small>** Selecciona un problema pre-establecido</small>
+              </mat-hint>
             </mat-form-field>
 
             <mat-form-field appearance="outline">
               <mat-label>Título</mat-label>
               <input matInput formControlName="title" (input)="onProblemTitle($event)">
+              <mat-hint align="start">
+                <small>** Escribe un título para tu problema</small>
+              </mat-hint>
             </mat-form-field>
 
             <div class="set-12 editor-form" *ngIf="isNewTopic">
               <angular-editor formControlName="description" [config]="editorConfig"></angular-editor>
+              <p class="hint-sm">
+                <small>** Escribe una descripción a tu problema</small>
+              </p>
             </div>
 
             <div class="set-12 topicdesc" *ngIf="!isNewTopic">
@@ -227,10 +268,11 @@
           </form>
 
           <div class="set-12 ctrlsedt">
-            <button type="button" mat-raised-button color="warn" matStepperPrevious>
+            <button type="button" mat-raised-button color="warn" matStepperPrevious [disabled]="submitted">
               <small>Anterior</small>
             </button>
-            <button type="button" mat-raised-button color="warn" (click)="saveTeamTopic()">
+            <button type="button" mat-raised-button color="warn" (click)="saveTeamTopic()"
+              [disabled]="topicFG.invalid || submitted">
               <small>Siguiente</small>
             </button>
             <mat-spinner diameter="30" *ngIf="submitted"></mat-spinner>
@@ -243,15 +285,21 @@
             <mat-form-field appearance="outline">
               <mat-label>Título</mat-label>
               <input type="text" matInput formControlName="title">
+              <mat-hint align="start">
+                <small>** Escribe un título para tu solución</small>
+              </mat-hint>
             </mat-form-field>
 
             <div class="set-12 editor-form">
               <angular-editor formControlName="description" [config]="editorConfig"></angular-editor>
+              <p class="hint-sm">
+                <small>** Escribe una descripción a tu solución</small>
+              </p>
             </div>
           </form>
 
           <div class="set-12 ctrlsedt">
-            <button type="button" mat-raised-button color="warn" matStepperPrevious>
+            <button type="button" mat-raised-button color="warn" matStepperPrevious [disabled]="submitted">
               <small>Anterior</small>
             </button>
             <button type="button" mat-raised-button color="warn" (click)="saveTeamSolution()"
@@ -264,7 +312,7 @@
 
         <mat-step>
           <h3>¡Gracias, tu registro ha finalizado!</h3>
-          <p>Puedes ver a tu equipo <a href="javascript:void(0)">aqui</a></p>
+          <p>Puedes ver a tu equipo <a href="javascript:void(0)" (click)="linkTeam()">aqui</a></p>
         </mat-step>
       </mat-stepper>
     </div>
