--- a/src/app/components/app-pagelet/app-pagelet.component.html
+++ b/src/app/components/app-pagelet/app-pagelet.component.html
@@ -32,7 +32,7 @@
       </button>
       <button mat-menu-item (click)="utilitySrvc.linkMe('/posts')">
         <mat-icon>forum</mat-icon>
-        <small>Muro Ciudadano</small>
+        <small>Muro Colectivo</small>
       </button>
       <button mat-menu-item (click)="popTestimonialsDialog()">
         <mat-icon>edit_note</mat-icon>
@@ -75,6 +75,10 @@
       <button mat-menu-item (click)="utilitySrvc.linkMe('/posts')">
         <mat-icon>forum</mat-icon>
         <span>Muro Colectivo</span>
+      </button>
+      <button mat-menu-item (click)="utilitySrvc.linkMe('/maraton')">
+        <mat-icon>school</mat-icon>
+        <span>Maratón Universitario</span>
       </button>
 
       <button mat-menu-item (click)="linkMe('userList')"
