--- a/src/app/posts/single-post/single-post.component.html
+++ b/src/app/posts/single-post/single-post.component.html
@@ -8,7 +8,7 @@
       <button type="button" mat-mini-fab color="primary" (click)="utilityService.linkMe('/posts')">
         <mat-icon>arrow_back</mat-icon>
       </button>
-      <span>Muro ciudadano</span>
+      <span>Muro Colectivo</span>
     </div>
     <mat-card>
       <div class="set-12">
