--- a/src/app/college-marathon/create-team/create-team.component.scss
+++ b/src/app/college-marathon/create-team/create-team.component.scss
@@ -1,10 +1,10 @@
 :host {
   width: 100vw;
   height: 100vh;
-  padding: 120px 40px 40px 40px;
+  // padding: 120px 40px 40px 40px;
 
   .frmbdy {
-    padding-bottom: 40px;
+    padding: 120px 40px 40px 40px;
   }
 
   .set-7 {
