--- a/src/app/college-marathon/single-team/single-team.component.html
+++ b/src/app/college-marathon/single-team/single-team.component.html
@@ -29,6 +29,13 @@
               <span>Solución</span>
             </ng-template>
           </mat-tab>
+
+          <mat-tab>
+            <ng-template mat-tab-label>
+              <mat-icon>view_in_ar</mat-icon>
+              <span>Proyecto</span>
+            </ng-template>
+          </mat-tab>
   
           <mat-tab>
             <ng-template mat-tab-label>
