--- a/src/app/college-marathon/create-team/create-team.component.scss
+++ b/src/app/college-marathon/create-team/create-team.component.scss
@@ -191,6 +191,14 @@
     font-weight: bold;
     padding: 0 1em;
   }
+
+  .myteams {
+    margin-top: 30px;
+
+    h3 {
+      margin-bottom: 20px;
+    }
+  }
 }
 
 :host(.fixmobile) {
